V4309: Vari Fix e Spostamenti

--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/OverallView.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/OverallView.xaml
@@ -146,7 +146,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="137" StatusComponent="953-01-MA1" Canvas.Left="8321" Canvas.Top="4651" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-        <Labels:Pipe Width="184" StatusComponent="293-01-MA1" Canvas.Left="3584" Canvas.Top="1356" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="304" StatusComponent="293-01-MA1" Canvas.Left="3314" Canvas.Top="1296" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -156,8 +156,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="212" StatusComponent="293-01-MA1" Canvas.Left="3466" Canvas.Top="1266" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="22" StatusComponent="293-01-MA1" Canvas.Left="3457" Canvas.Top="1257" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="212" StatusComponent="293-01-MA1" Canvas.Left="3256" Canvas.Top="1146" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="22" StatusComponent="293-01-MA1" Canvas.Left="3247" Canvas.Top="1137" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -168,19 +168,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="76" StatusComponent="477-01-MA1" Canvas.Left="7745" Canvas.Top="2155" Color="Water" VisibilityComponent="477-22-CV1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="120-71-ECS2" Canvas.Left="4341" Canvas.Top="1111" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="296" RenderTransformOrigin="0.5,0.5" StatusComponent="120-71-ECS2" Canvas.Left="4351" Canvas.Top="968" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="120-71-ECS2" Canvas.Left="4494" Canvas.Top="825" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="228-71-ECS2" Canvas.Left="4980" Canvas.Top="825" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="298" RenderTransformOrigin="0.5,0.5" StatusComponent="120-71-ECS2" Canvas.Left="4170" Canvas.Top="991" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="173" RenderTransformOrigin="0.5,0.5" StatusComponent="228-71-ECS2" Canvas.Left="4890" Canvas.Top="991" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
 
         <Labels:Pipe Width="239" StatusComponent="516-01-MA1" Canvas.Left="7993" Canvas.Top="2956" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="138" StatusComponent="516-01-MA1" Canvas.Left="7926" Canvas.Top="3023" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -262,7 +251,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="263" RenderTransformOrigin="0.5,0.5" StatusComponent="228-71-ECS2" Canvas.Left="5054" Canvas.Top="547" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="286" RenderTransformOrigin="0.5,0.5" StatusComponent="228-71-ECS2" Canvas.Left="4915" Canvas.Top="687" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="452" RenderTransformOrigin="0.5,0.5" StatusComponent="228-71-ECS2" Canvas.Left="4832" Canvas.Top="770" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -647,8 +636,8 @@
         <Labels:Pipe Width="66" StatusComponent="293-01-MA1" Canvas.Left="7754" Canvas.Top="1446" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="1003" StatusComponent="293-01-MA1" Canvas.Left="6735" Canvas.Top="1446" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="730" StatusComponent="293-01-MA1" Canvas.Left="5977" Canvas.Top="1446" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="2276" StatusComponent="293-01-MA1" Canvas.Left="3674" Canvas.Top="1446" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="120" StatusComponent="293-01-MA1" Canvas.Left="3408" Canvas.Top="1174" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="2486" StatusComponent="293-01-MA1" Canvas.Left="3464" Canvas.Top="1446" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="120" StatusComponent="293-01-MA1" Canvas.Left="3198" Canvas.Top="1054" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -658,7 +647,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="105" StatusComponent="293-01-MA1" Canvas.Left="3365" Canvas.Top="1116" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="105" StatusComponent="293-01-MA1" Canvas.Left="3155" Canvas.Top="996" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="135" StatusComponent="292-01-MA1" Canvas.Left="8427" Canvas.Top="899" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="500" StatusComponent="292-01-MA1" Canvas.Left="8310" Canvas.Top="1147" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -826,8 +815,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <TextBlock VerticalAlignment="Center" Canvas.Top="791" Text="BOLLEGRAAF" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="4687" HorizontalAlignment="Center" FontSize="26" Foreground="White"/>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="114" Canvas.Left="4500" Canvas.Top="828" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <TextBlock VerticalAlignment="Top" Canvas.Top="957" Text="BOLLEGRAAF" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="4597" HorizontalAlignment="Center" FontSize="26" Foreground="White"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="114" Canvas.Left="4410" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -837,9 +826,9 @@
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="426" Canvas.Left="4556" Canvas.Top="772" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="426" Canvas.Left="4556" Canvas.Top="886" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="4923" Canvas.Top="828" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="426" Canvas.Left="4466" Canvas.Top="938" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="426" Canvas.Left="4466" Canvas.Top="1052" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="4833" Canvas.Top="994" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -849,9 +838,9 @@
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
-        <TextBlock Canvas.Top="833" Text="{lex:Loc Bottles Selection}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="4641" FontSize="26" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <local:P020 CacheMode="BitmapCache" Canvas.Left="2010" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="22" d:IsLocked="True"/>
-        <local:P100 CacheMode="BitmapCache" Canvas.Left="2872" Canvas.Top="602" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <TextBlock Canvas.Top="999" Text="{lex:Loc Bottles Selection}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="4551" FontSize="26" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <local:P020 CacheMode="BitmapCache" Canvas.Left="1349" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="39" d:IsLocked="True"/>
+        <local:P100 CacheMode="BitmapCache" Canvas.Left="2662" Canvas.Top="482" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
 
         <local:P230 CacheMode="BitmapCache" Canvas.Left="5141" Canvas.Top="454" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P268 CacheMode="BitmapCache" Canvas.Left="17" Canvas.Top="1976" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
