--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P230.xaml
@@ -6,16 +6,14 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents"
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
+             xmlns:Custom="https://github.com/XAMLMarkupExtensions/WPFLocalizationExtension" 
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
         <Labels:Pipe Color="Water" Width="172" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="142" Canvas.Top="623" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -25,10 +23,7 @@
         <Labels:Pipe Width="157" StatusComponent="291-01-MA1" Canvas.Left="878" Canvas.Top="115" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -36,10 +31,7 @@
         <Labels:Pipe Color="Water" Width="168" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="913" Canvas.Top="621" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform />
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform />
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -55,10 +47,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Canvas.Left="215" Canvas.Top="514">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -66,10 +55,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="130" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="218" Canvas.Top="300" VisibilityComponent="229-01-MA1" VisibilitySignal="LS3">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -77,21 +63,15 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="88" PipeHeight="Medium" StatusComponent="228-01-MA1" Canvas.Left="701" Canvas.Top="132">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="143" StatusComponent="228-71-ECS3" PipeHeight="Medium" Canvas.Left="176" Canvas.Top="93"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="217" StatusComponent="228-71-ECS3" PipeHeight="Medium" Canvas.Left="102" Canvas.Top="93"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="367" Canvas.Top="691">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -99,10 +79,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="200" RenderTransformOrigin="0.5,0.5" StatusComponent="229-21-CV1" Canvas.Left="208" Canvas.Top="686">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -111,10 +88,7 @@
         <Labels:Pipe Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="240-01-MA1" PipeHeight="Medium" Canvas.Left="984" Canvas.Top="515" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -122,20 +96,14 @@
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="134" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="985" Canvas.Top="303" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="229-01-MA1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="70" StatusComponent="242-01-MA1" PipeHeight="Medium" Canvas.Left="1137" Canvas.Top="691" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -143,10 +111,7 @@
         <Labels:Pipe Color="Water" Width="196" RenderTransformOrigin="0.5,0.5" StatusComponent="242-01-MA1" Canvas.Left="979" Canvas.Top="683" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -156,20 +121,14 @@
         <Labels:Pipe Width="86" StatusComponent="291-01-MA1" Canvas.Left="488" Canvas.Top="150" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="48" StatusComponent="291-01-MA1" Canvas.Left="507" Canvas.Top="61" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -188,20 +147,14 @@
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="502" Canvas.Left="607" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="503" Canvas.Left="386" Canvas.Top="546" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
@@ -215,13 +168,24 @@
         <Machines:VRC_WaterCollectingTank Height="66" Width="93" Canvas.Left="1032" Canvas.Top="756" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="286" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="1056" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="94" Stroke="Black" Width="4" Canvas.Left="207" Canvas.Top="54" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="184" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Machines:External.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                </TransformGroup>
+            </Machines:External.RenderTransform>
+        </Machines:External>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="26" Foreground="White" Text="BOLLEGRAAF" Canvas.Left="20" Canvas.Top="23" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBlock Canvas.Top="142" Text="{Custom:Loc Bottles Selection}" TextWrapping="Wrap" TextAlignment="Left" Opacity="0.7" Canvas.Left="20" FontSize="26" Foreground="White" Height="66" Width="137" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="234-01-MA1" JumpToLabel="268-01-MA1" Canvas.Left="669" Canvas.Top="694"/>
         <Labels:JumpLabel JumpFromLabel="244-01-MA1" JumpToLabel="287-01-MA1" Canvas.Left="1423" Canvas.Top="691" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="229-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="1066" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="292-01-MA1" Canvas.Left="66" Canvas.Top="506" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="425" Canvas.Top="759" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="246-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="1195" Canvas.Top="759" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="228-01-MA1" Canvas.Left="314" Canvas.Top="115"/>
+        <Labels:JumpLabel JumpFromLabel="098-01-ECS2" JumpToLabel="029-71-ECS2" Canvas.Left="30" Canvas.Top="63" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="228-01-MA1" Canvas.Left="398" Canvas.Top="120"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="234-01-MA1" Canvas.Left="534" Canvas.Top="640"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-01-YA1" Canvas.Left="359" Canvas.Top="406"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="232-01-MA1" Canvas.Left="424" Canvas.Top="559"/>
@@ -238,18 +202,6 @@
         <Labels:DeviceLabel ComponentName="240-01-MA1" Canvas.Left="1006" Canvas.Top="370" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="236-01-MA1" Canvas.Left="155" Canvas.Top="763" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="246-01-MA1" Canvas.Left="925" Canvas.Top="763" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="94" Stroke="Black" Width="4" Canvas.Left="253" Canvas.Top="54" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="230" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:External.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:External.RenderTransform>
-        </Machines:External>
-        <Labels:DeviceLabel ComponentName="228-71-ECS3" RenderTransformOrigin="0.567,-2.17" Canvas.Left="99" Canvas.Top="73" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="26" Foreground="White" Text=" BOLLEGRAAF" Canvas.Left="65" Canvas.Top="29" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="228-71-ECS3" Canvas.Left="232" Canvas.Top="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
