--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P288.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P288.xaml
@@ -11,10 +11,7 @@
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="196" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="366" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="477-22-CV1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -23,30 +20,21 @@
         <Labels:Pipe Color="Water" Width="135" StatusComponent="288-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="936" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="57" StatusComponent="288-22-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="918" Canvas.Top="393" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="98" StatusComponent="288-71-ECS1" RenderTransformOrigin="0.5,0.5" Canvas.Left="897" Canvas.Top="287" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -55,10 +43,7 @@
         <Labels:Pipe Color="Water" Width="225" StatusComponent="285-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="608" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -68,10 +53,7 @@
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="262" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="297" Canvas.Top="187" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -79,10 +61,7 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="186" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="387" Canvas.Top="680">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -93,30 +72,21 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="192" StatusComponent="246-01-MA1" Color="Water" Canvas.Left="313" Canvas.Top="224">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="354" Canvas.Top="459">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="304" Canvas.Top="329">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -124,103 +94,49 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="264" StatusComponent="457-01-MA1" Color="Water" Canvas.Left="314" Canvas.Top="188">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="27" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="574" Canvas.Top="607">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1143" Canvas.Top="242">
+        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1168" Canvas.Top="266"/>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" Canvas.Left="372" Canvas.Top="617">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
                     <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="295" Canvas.Top="540">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Top" Height="50" Width="50" Color="Water" Canvas.Left="372" Canvas.Top="586">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform />
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="295" Canvas.Top="509">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1170" Canvas.Top="656">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
                     <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
                 </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1170" Canvas.Top="656"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="566" Canvas.Top="600"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="308" Canvas.Top="339"/>
-        <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1170" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1170" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
+        <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1170" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1170" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="2" Stroke="Black" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="901" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="969" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:External.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
         <Machines:CV_Valve Canvas.Left="924" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center" Height="24" Width="44" RenderTransformOrigin="0.5,0.5">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
@@ -229,9 +145,6 @@
             <Machines:V01_SCW_Screw_wHopper.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_SCW_Screw_wHopper.RenderTransform>
         </Machines:V01_SCW_Screw_wHopper>
