--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P899.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P899.xaml
@@ -10,89 +10,106 @@
              x:Class="Prevu.Synoptics.P899" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="138" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="383" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
-        <Labels:Pipe Width="144" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="447" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
+        <Labels:Pipe Width="203" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="459" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
+        <Labels:Pipe Width="144" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="588" Canvas.Top="312" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="107" StatusComponent="953-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="960" Canvas.Top="264" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="112" StatusComponent="953-01-MA1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="1009" Canvas.Top="318" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="107" StatusComponent="953-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1056" Canvas.Top="264" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="112" StatusComponent="953-01-MA1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="1105" Canvas.Top="318" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="94" StatusComponent="923-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="990" Canvas.Top="176" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="200" StatusComponent="923-01-MA1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="982" Canvas.Top="274" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="94" StatusComponent="923-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1086" Canvas.Top="176" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="200" StatusComponent="923-01-MA1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="879-21-CV1" VisibilitySignal="LS1" Canvas.Left="1078" Canvas.Top="274" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="90" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="899-25-CV1" VisibilitySignal="LS1" Canvas.Left="407" Canvas.Top="464" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="90" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="899-25-CV1" VisibilitySignal="LS1" Canvas.Left="548" Canvas.Top="464" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="106" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="899-25-CV1" VisibilitySignal="LS2" Canvas.Left="533" Canvas.Top="462" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="106" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="899-25-CV1" VisibilitySignal="LS2" Canvas.Left="674" Canvas.Top="462" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="90" StatusComponent="929-25-CV1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="929-25-CV1" VisibilitySignal="LS1" Canvas.Left="962" Canvas.Top="465" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="90" StatusComponent="929-25-CV1" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="929-25-CV1" VisibilitySignal="LS1" Canvas.Left="1058" Canvas.Top="465" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="104" StatusComponent="929-25-CV1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="929-25-CV1" VisibilitySignal="LS2" Canvas.Left="1089" Canvas.Top="464" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="104" StatusComponent="929-25-CV1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="929-25-CV1" VisibilitySignal="LS2" Canvas.Left="1185" Canvas.Top="464" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="437" Canvas.Top="349" Height="86" Width="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="992" Canvas.Top="350" Height="86" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_BBF_DoubleBag Canvas.Left="376" Canvas.Top="476" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_BBF_DoubleBag Canvas.Left="931" Canvas.Top="477" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="899-BAGS" DetailsPageName="D899" Canvas.Left="493" Canvas.Top="530" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="929-BAGS" DetailsPageName="D929" Canvas.Left="1048" Canvas.Top="531" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="929-25-CV1" Canvas.Left="1026" Canvas.Top="418" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="899-25-CV1" Canvas.Left="473" Canvas.Top="417" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="929-25-CV1" JumpToLabel="953-01-MA1" Canvas.Left="889" Canvas.Top="232" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:JumpLabel JumpFromLabel="899-25-CV1" JumpToLabel="883-01-MA1" Canvas.Left="320" Canvas.Top="210" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:JumpLabel JumpFromLabel="929-25-CV1" JumpToLabel="923-01-MA1" Canvas.Left="919" Canvas.Top="144" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:Pipe Width="326" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="298" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="122" StatusComponent="890-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="174" Canvas.Top="423" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="46" StatusComponent="890-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="271" Canvas.Top="444" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="67" StatusComponent="880-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="237" Canvas.Top="353" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="118" StatusComponent="880-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="243" Canvas.Top="410" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="136" RenderTransformOrigin="0.5,0.5" StatusComponent="883-01-MA1" Color="Air" Canvas.Left="327" Canvas.Top="564" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="883-01-MA1" Canvas.Left="225" Canvas.Top="564" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="881-01-MA1" Canvas.Left="267" Canvas.Top="530" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="578" Canvas.Top="349" Height="86" Width="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1088" Canvas.Top="350" Height="86" Width="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="517" Canvas.Top="476" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="1027" Canvas.Top="477" Height="166" Width="286" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="196" Canvas.Top="542" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="271" Canvas.Top="460" Height="52" Width="54" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="266" Canvas.Top="531" Height="46" Width="73" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="929-25-CV1" JumpToLabel="953-01-MA1" Canvas.Left="985" Canvas.Top="232" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel JumpFromLabel="929-25-CV1" JumpToLabel="923-01-MA1" Canvas.Left="1015" Canvas.Top="144" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel JumpFromLabel="881-01-MA1" JumpToLabel="892-21-CV1" Canvas.Left="98" Canvas.Top="391" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel JumpFromLabel="881-01-MA1" JumpToLabel="882-21-CV1" Canvas.Left="163" Canvas.Top="320" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DetailsLabel ComponentName="899-BAGS" DetailsPageName="D899" Canvas.Left="634" Canvas.Top="530" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="929-BAGS" DetailsPageName="D929" Canvas.Left="1144" Canvas.Top="531" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="929-25-CV1" Canvas.Left="1122" Canvas.Top="418" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="899-25-CV1" Canvas.Left="614" Canvas.Top="417" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="883-01-MA1" Canvas.Left="98" Canvas.Top="542" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="881-01-MA1" Canvas.Left="330" Canvas.Top="460" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
